@@ -1,3 +1,7 @@
+2023-11-05	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
+
+	New macro 'cppp_install_library'.
+
 2023-10-28	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
 
 	Perfect 'check_have_visibility()'.
